--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-project-template",
+  "name": "react-pokemon-finder",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -9,8 +9,12 @@
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.2-beta.4",
+    "@reduxjs/toolkit": "^1.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
