--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "react-pokemon-finder",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://pedrovelasquez9.github.io/react-pokemon-finder/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "vite build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.2",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
